# VLcache

./: .gitignore  CMakeLists.txt  a.out  test.cpp  testdata.py  testgen.py
source/: LFU_cache.hpp  cache.hpp  cache_assistance.cpp  cache_assistance.hpp  ideal_cache.hpp  main.cpp  test_Ideal.cpp  test_LFU.cpp
test/: data.txt
